# trivy-plugin-epss

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  epss.py  plugin.yaml  pyproject.toml  tests.py
.github/workflows/: ci.yml
tests/: tests_epss.py
